fix layout bugs v5

--- a/src/scss/_base/_reset.scss
+++ b/src/scss/_base/_reset.scss
@@ -9,6 +9,7 @@
 body {
   -webkit-font-smoothing: subpixel-antialiased;
   -moz-osx-font-smoothing: grayscale;
+  letter-spacing: .01em;
 }
 
 h1,
