--- a/src/scss/_layouts/_vote.scss
+++ b/src/scss/_layouts/_vote.scss
@@ -12,7 +12,7 @@
   align-items: center;
 
   @include maxScreen(480px) {
-    padding: 22px 23px 24px;
+    padding: 24px 23px 22px;
     grid-column-gap: 8px;
     grid-row-gap: 22px;
   }
